--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuex": "^4.0.2"
     }
 }
